Bug 286945 - On printing month, date line footer prints in center of calendar
Summary: On printing month, date line footer prints in center of calendar
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: printing (other bugs)
Version First Reported In: 4.7
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-18 17:43 UTC by rlambkin
Modified: 2012-02-20 13:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rlambkin 2011-11-18 17:43:57 UTC
Version:           4.7 (using KDE 4.7.2) 
OS:                Linux

Print with bottom margin of 13cm. Footer "printed: {today}" prints at bottom of calendar and in center of calendar

Reproducible: Didn't try

Steps to Reproduce:
Set bottom print margin to 13cm

Actual Results:  
see details

Expected Results:  
'printed-on date line' only at the bottom of the calendar

Would like option to not print the 'printed-on date line' at all
Comment 1 Allen Winter 2011-12-17 22:42:40 UTC
Git commit 35f2980efa3836b8b1493f7d59ba70af9b038aa9 by Allen Winter.
Committed on 17/12/2011 at 23:40.
Pushed by winterz into branch 'master'.

fat-fingers-error
an extra footer was being printed in the middle of the month print.

should fix the bug in 286945
not closing this bug because I agree there should be an option
to disable printing the footer. can't do that until 4.9 however.

CCBUG: 286945

M  +0    -1    korganizer/printing/calprintdefaultplugins.cpp

http://commits.kde.org/kdepim/35f2980efa3836b8b1493f7d59ba70af9b038aa9
Comment 2 Allen Winter 2012-02-16 23:25:57 UTC
Git commit ca8fc44e914e5d6f2514ffb68903bcd332ec267e by Allen Winter.
Committed on 16/02/2012 at 00:55.
Pushed by winterz into branch 'master'.

Add a new option for printing the footer
Fix up the layouts of all the print dialog pages
add some more whatsthis and tooltips to the print dialogs

MERGE: none
GUI:
FIXED-IN: 4.9.0

M  +216  -173  korganizer/printing/calprintdayconfig_base.ui
M  +49   -19   korganizer/printing/calprintdefaultplugins.cpp
M  +1    -0    korganizer/printing/calprintdefaultplugins.h
M  +79   -48   korganizer/printing/calprintincidenceconfig_base.ui
M  +189  -146  korganizer/printing/calprintmonthconfig_base.ui
M  +19   -2    korganizer/printing/calprintpluginbase.cpp
M  +6    -0    korganizer/printing/calprintpluginbase.h
M  +211  -187  korganizer/printing/calprinttodoconfig_base.ui
M  +224  -175  korganizer/printing/calprintweekconfig_base.ui

http://commits.kde.org/kdepim/ca8fc44e914e5d6f2514ffb68903bcd332ec267e
Comment 3 Christophe Marin 2012-02-20 13:22:25 UTC
Git commit 556a29152281d8a3a4c9756ef1699204087c2d37 by Christophe Giboudeaux, on behalf of Allen Winter.
Committed on 16/02/2012 at 00:55.
Pushed by cgiboudeaux into branch 'akregator_port'.

Add a new option for printing the footer
Fix up the layouts of all the print dialog pages
add some more whatsthis and tooltips to the print dialogs

MERGE: none
GUI:
FIXED-IN: 4.9.0

M  +216  -173  korganizer/printing/calprintdayconfig_base.ui
M  +49   -19   korganizer/printing/calprintdefaultplugins.cpp
M  +1    -0    korganizer/printing/calprintdefaultplugins.h
M  +79   -48   korganizer/printing/calprintincidenceconfig_base.ui
M  +189  -146  korganizer/printing/calprintmonthconfig_base.ui
M  +19   -2    korganizer/printing/calprintpluginbase.cpp
M  +6    -0    korganizer/printing/calprintpluginbase.h
M  +211  -187  korganizer/printing/calprinttodoconfig_base.ui
M  +224  -175  korganizer/printing/calprintweekconfig_base.ui

http://commits.kde.org/kdepim/556a29152281d8a3a4c9756ef1699204087c2d37