Add a new option for printing the footer Fix up the layouts of all the print dialog pages add some more whatsthis and tooltips to the print dialogs

MERGE: none
GUI:
BUG: 286945
FIXED-IN: 4.9.0